--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             class="ri-linkedin-box-fill"></i></a></li>
                 <li><a href="https://www.instagram.com/__im.faiyyazzz.___/" target="_blank">Contact <i
                             class="ri-instagram-fill"></i></a></li>
-                <li><a href="./Aakash Nishad Resume.pdf" download>
+                <li><a href="./Mohammad_Faiyyaz_Sheikh.pdf" download>
                         <button>Download Resume <i class="ri-download-2-line"></i></button>
                     </a></li>
             </ul>
@@ -62,7 +62,7 @@
                     <li><a href="https://www.linkedin.com/in/faiyyazsheikh" target="_blank">LinkedIn</a></li>
                     <li><a href="https://www.instagram.com/__im.faiyyazzz.___" target="_blank">Contact</a></li>
                 </ul>
-                <a href="./Aakash Nishad Resume.pdf" download>
+                <a href="./Mohammad_Faiyyaz_Sheikh.pdf" download>
                     <button>Download Resume</button>
                 </a>
                 <i id="menubtn" class="ri-menu-line"></i>
